--- a/SpringBootAssignment5/Jenkinsfile
+++ b/SpringBootAssignment5/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
         }
         stage('Package') {
             steps {
-               bat 'mvn package'
+               bat 'mvn package -f SpringBootAssignment/pom.xml'
             }
         }
     }
